--- a/ConnectFourAnimated/connectFour.html
+++ b/ConnectFourAnimated/connectFour.html
@@ -27,5 +27,5 @@
     </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
-<script src='connectFour.js'></script>
+<script src='connectFourV2.js'></script>
 </html>
