--- a/Simon/index.html
+++ b/Simon/index.html
@@ -3,19 +3,24 @@
 <head>
     <title></title>
     <link rel='stylesheet' href='simon.css'>
-    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Bangers" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Bangers|Wallpoet" rel="stylesheet">
     <script src='jquery-3.2.1.min.js'></script>
 </head>
 <body>
-    <div id='score'>0</div>
+    <div class='title'>
+        SIMON
+    </div>
     <div id='boxWrapper'>
         <div class='box' box='1'></div>
         <div class='box' box='2'></div>
         <div class='box' box='3'></div>
         <div class='box' box='4'></div>
+        <div id='score'>0</div>
     </div>
-    <div id='message'>GO</div>
-    <div id='start'>START</div>
+    <div id='buttonWrapper'>
+        <div id='message'>GO</div>
+        <div id='start'>START</div>
+    </div>
     
 </body>
 <script src='simon.js'></script>
