--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -7,23 +7,33 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
     <body>
+        <select id='themes'>
+            <option value='0'>Teams</option>
+            <option value='1'>X's and O's</option>
+            <option value='2'>Animals</option>
+        </select>
         <div id='board'>
             <div id='spotWrapper'>
-                <div class='spot' avail='1' r='0' c='0'><div class='marker'></div></div>
-                <div class='spot mLeft' avail='1' r='0' c='1'><div class='marker'></div></div>
-                <div class='spot mLeft' avail='1' r='0' c='2'><div class='marker'></div></div>
-                <div class='spot mTop' avail='1' r='1' c='0'><div class='marker'></div></div>
-                <div class='spot mTop mLeft' avail='1' r='1' c='1'><div class='marker'></div></div>
-                <div class='spot mTop mLeft' avail='1' r='1' c='2'><div class='marker'></div></div>
-                <div class='spot mTop' avail='1' r='2' c='0'><div class='marker'></div></div>
-                <div class='spot mTop mLeft' avail='1' r='2' c='1'><div class='marker'></div></div>
-                <div class='spot mTop mLeft' avail='1' r='2' c='2'><div class='marker'></div></div>
+                <div class='spot' player='0' r='0' c='0' d1><div class='marker'></div></div>
+                <div class='spot mLeft' player='0' r='0' c='1'><div class='marker'></div></div>
+                <div class='spot mLeft' player='0' r='0' c='2' d2><div class='marker'></div></div>
+                
+                <div class='spot mTop' player='0' r='1' c='0'><div class='marker'></div></div>
+                <div class='spot mTop mLeft' player='0' r='1' c='1' d1 d2><div class='marker'></div></div>
+                <div class='spot mTop mLeft' player='0' r='1' c='2'><div class='marker'></div></div>
+                
+                <div class='spot mTop' player='0' r='2' c='0' d2><div class='marker'></div></div>
+                <div class='spot mTop mLeft' player='0' r='2' c='1'><div class='marker'></div></div>
+                <div class='spot mTop mLeft' player='0' r='2' c='2' d1><div class='marker'></div></div>
             </div>
         </div>
-        <div id='modal'>
-            <div id='textWrapper'></div>
+        <div id='modalWrapper'>
+            <div id='modal'>
+                <div id='textWrapper'></div>
+                <div id='restart'>RESTART</div>
+            </div>
         </div>
     </body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
-    <script src='game.js'></script>
+    <script src='gameV3.min.js'></script>
 </html>
