--- a/Day1/index.html
+++ b/Day1/index.html
@@ -1,33 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Day 1</title>
-        <style>
-            div{
-                width:100px;
-                height:100px;
-                overflow:hidden;
-                margin:10px;
-                border-radius:10px;
-            }
-            
-            .color1{
-                background-color:blue;
-            }
-            .color2{
-                background-color:green;
-                border:2px dashed orange;
-            }
-            #unique{
-                border-radius:20px;
-            }
-        </style>
+        <title></title>
     </head>
     <body>
-        <div class='color1'></div>
-        <div class='color2'></div>
-        <div id='unique' class='color2'></div>
-        <div class='color1'></div>
-        <div class='color2'></div>
+        <div style='color:#ff0;background-color:#800; width:300px; height:200px; border-radius:10px'>
+            6th grade
+        </div>
+        <div style='background-color:#0aa; width:500px; height:200px; border-radius:20px; border:10px dotted #800;margin: 10px;padding:20px; box-sizing: border-box;'>
+            Meg is the best. Alli's b-day tomorrow.
+            <div style='background-color:#0ff;width:100px;height:100px'></div>
+        </div>
     </body>
 </html>
