--- a/2019-2020/8th/Tri-2/Assessment1Class/index.html
+++ b/2019-2020/8th/Tri-2/Assessment1Class/index.html
@@ -11,13 +11,21 @@
         text-align: center;
         line-height: 100px;
       }
+      .color1{
+        background-color: orange;
+        color: black;
+      }
+      .color2{
+        background-color: purple;
+        color: white;
+      }
     </style>
   </head>
   <body>
-    <div id='box1' class='box'>1</div>
-    <div id='box2' class='box'>2</div>
-    <div id='box3' class='box'>3</div>
-    <div id='box4' class='box'>4</div>
+    <div id='box1' class='box color1'>1</div>
+    <div id='box2' class='box color2'>2</div>
+    <div id='box3' class='box color2'>3</div>
+    <div id='box4' class='box color1'>4</div>
     <div id='result'></div>
   </body>
 </html>
