--- a/2019-2020/8th/Tri-2/Assessment1Class/index.html
+++ b/2019-2020/8th/Tri-2/Assessment1Class/index.html
@@ -10,6 +10,7 @@
         font-size:50px;
         text-align: center;
         line-height: 100px;
+        display: inline-block;
       }
       .color1{
         background-color: orange;
@@ -19,7 +20,15 @@
         background-color: purple;
         color: white;
       }
+      #result{
+          background-color: darkblue;
+            width: 800px;
+            height: 50px;
+            border-radius: 10px;
+            margin-top: 10px;
+      }
     </style>
+    <script src='https://code.jquery.com/jquery-3.4.1.min.js'></script>
   </head>
   <body>
     <div id='box1' class='box color1'>1</div>
@@ -28,4 +37,5 @@
     <div id='box4' class='box color1'>4</div>
     <div id='result'></div>
   </body>
+  <script src="boxes.js"></script>
 </html>
