--- a/Sorting/Merge/index.html
+++ b/Sorting/Merge/index.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <title></title>
+        <link rel="icon" type="image/png" href="https://www.iconninja.com/files/480/760/7/sorting-az-filters-ascending-sort-icon.svg">
     </head>
     <body>
     </body>
-    <script src='sort.js'></script>
+    <script src='sortsV2.js'></script>
 </html>
