--- a/BoxGame/index.html
+++ b/BoxGame/index.html
@@ -5,6 +5,7 @@
         <script src='https://code.jquery.com/jquery-3.4.1.min.js'></script>
     </head>
     <body>
+        <div id='scoreBoard'></div>
         <div id='gameBoard'></div>
     </body>
     <script src='boxGame.js'></script>
