--- a/BoxGame/index.html
+++ b/BoxGame/index.html
@@ -2,11 +2,17 @@
 <html>
     <head>
         <link rel="stylesheet" href="boxGame.css">
+        <link href="https://fonts.googleapis.com/css?family=Odibee+Sans&display=swap" rel="stylesheet">
         <script src='https://code.jquery.com/jquery-3.4.1.min.js'></script>
     </head>
     <body>
-        <div id='scoreBoard'></div>
+        <div id='scoreBoard'>
+            <div id='score0' class='score p0 currTurn'>0</div>
+            <div id='leftOver' class='score'>0</div>
+            <div id='score1' class='score p1'>0</div>
+        </div>
         <div id='gameBoard'></div>
+
     </body>
     <script src='boxGame.js'></script>
 </html>
