--- a/Selectors/index.html
+++ b/Selectors/index.html
@@ -1,34 +1,27 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Selector</title>
-        <style>
-            div{
-                height:100px;
-                width:200px;
-                background-color:#a00;
-                margin: 5px;
-                border-radius: 12px;
-                display: inline-block;
-            }
-            #blah{
-                background-color: #0a0;
-            }
-            .fooh{
-                border: 4px dotted #000;
-            }
-        </style>
-    </head>
-    <body>
-        <div class='fooh'></div>
-        <div></div>
-        <div></div>
-        <div id='blah' class='fooh'></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div class='fooh'></div>
-        <div></div>
-        <div></div>
-    </body>
+<head>
+    <title>Rectangles</title>
+    <style>
+        div{
+            width:200px;
+            height:100px;
+            background-color:#f09240;
+            margin: 5px;
+            display: inline-block;  
+        }
+    </style>
+</head>
+<body>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+</body>
 </html>
