--- a/BlackJack/index.html
+++ b/BlackJack/index.html
@@ -4,11 +4,12 @@
         <title>Blackjack</title>
         <link href="cardPNG/CSicon.png" rel="icon">
         <link rel='stylesheet' type='text/css' href='blackjack.css'>
-        <link href="https://fonts.googleapis.com/css?family=Coda:800" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Coda:800|Righteous" rel="stylesheet">
         <script src='js/jquery-3.2.1.min.js'></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
     </head>
     <body>
-        <div id='dealer' class='playerWrapper' player='d'>
+        <div id='dealer' class='playerWrapper' player='1'>
             <div class='playerPoints'></div>
             <div class='cardPlaceHolder'></div>
             <div class='cardsWrapper'></div>
@@ -19,10 +20,20 @@
             <div class='cardsWrapper'></div>        
         </div>
         <div id='buttonWrapper'>
-            <div id='startButton' class='button'>START</div>
-            <div id='hitButton' class='button'>HIT</div>
-            <div id='stayButton' class='button'>STAY</div>
+            <div id='startButton' class='button' startGame>START</div>
+            <div id='gameButtons'>
+                <div id='hitButton' class='button'>HIT</div>
+                <div id='stayButton' class='button'>STAY</div>
+            </div>
+        </div>
+        <div id='winnerWrapper'>
+            <div id='winnerModal'>
+                <div id='innerModal'>
+                    <div id='message'></div>
+                    <div id='restart' class='button' startGame>RESTART</div>
+                </div>
+            </div>
         </div>
     </body>
-    <script src='js/blackjack.js'></script>
+    <script src='js/blackjackAnimated.js'></script>
 </html>
