--- a/BoxGame/index.html
+++ b/BoxGame/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="boxGame.min.css">
+        <link rel="stylesheet" href="boxGame.css">
         <link href="https://fonts.googleapis.com/css?family=Odibee+Sans&display=swap" rel="stylesheet">
         <script src='https://code.jquery.com/jquery-3.4.1.min.js'></script>
     </head>
