--- a/BoxGame/index.html
+++ b/BoxGame/index.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="boxGame.min.css">
         <link href="https://fonts.googleapis.com/css?family=Odibee+Sans&display=swap" rel="stylesheet">
+        <link href="blueDot.png" rel='icon'>
         <script src='https://code.jquery.com/jquery-3.4.1.min.js'></script>
     </head>
     <body>
